[package]
name = "imaginal-snapshot"
authors = ["Greg Funchess <gfunchess@gmail.com>"]
description = "Take snapshots of the imaginal realm (specifically the Mandelbrot set)"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }

[profile.release]
strip = true
